/* Soortn reggae */ Ver-NSS-ed, verbeaterd sassisk

--- a/Reggae.mw
+++ b/Reggae.mw
@@ -55,19 +55,26 @@ Standaard in Reggae is et hammondörgel. Dat volget deselvde akkoorden as den sl
 Den piano is in latere jåren pas by reggae by edån, üm et vöär amerikaanske en europeeske oren wat pleseriger te låten klinken. Ouk den piano spöält stakkato akkoorden nå den tel. Nen bekenden reggaepianist was  [[Augustus Pablo]], den as ouk de [[melodika]] introduceerden.
 
 == Undüdelikheid oaver et tellen ==
-Der is wat undüdelikheid oaver et tellen van reggae, of beater, et interpreteren van et tempo. Wat lüde meynet dat et  ''ondedrop''-ritme nen klap up yderen tweyden en veerden tel hevt, wår et nåpikken precys tüsken valt. Dan vöölt de musik as ''1 tsjak '''2''' tsjak 3 tsjak '''4''' tsjak''. Et andere kamp meynet dat et dübbel sou rap eteld worden müt. Et nåpikken kümt dan al up de tweye en vere: ''1 tsjak '''3''' tsjak''. 'n Argument en vöärbeald vöär de eyrste leasing is dat [[Carlton Barrett]], drummer by [[Bob Marley]], in et nummer ''Waiting in Vain'' up de eyrste manere intikket. Uuteyndelik kümt et an up den tohöyrder syn eygene vöärköär.
+Der is wat undüdelikheid oaver et tellen van reggae, of beater, et interpreteren van et tempo. Wat lüde meynet dat et ''ondedrop''-ritme nen klap up yderen tweyden en veerden tel hevt, wår et nåpikken precys tüsken valt. Dan vöölt de musik as ''1 tsjak '''2''' tsjak 3 tsjak '''4''' tsjak''. Et andere kamp meynet dat et dübbel sou rap eteld worden müt. Et nåpikken kümt dan al up de tweye en vere: ''1 tsjak '''3''' tsjak''. 'n Argument en vöärbeald vöär de eyrste leasing is dat [[Carlton Barrett]], drummer by [[Bob Marley]], in et nummer ''Waiting in Vain'' up de eyrste manere intikket. Uuteyndelik kümt et an up den tohöyrder syn eygene vöärköär.
 
-== Soortn reggae ==
-Dr zeent onmeundig völle soortn reggae ontstoan, duurdet verskeaidene ärtieste probeerdn dr ne eegne dreei an te geewn, of t te mengn met aandere muziekstieln. Zo he'j de oorsproonkelike [[roots reggae]], wat vake zwoare pollitieke en relligieuze tekste hef, [[Lovers Rock]], wat n zelfden muzikaaln slag hef as ''roots'', mer allene mear oawer leefde geet, [[Dub]]reggae ontsteund doo't Jamaikaanse DJ's (''Selectas'') met instrumentale versies van ''roots'' an t knooin gungn, en völle met echo-effekte begunn te spöln. Hierduur ontsteund n "zwewerigen" soort reggae met völle noadruk op de [[basgitaar|bas]] en [[drums]]. Dan he'j [[Dancehall]] reggae, ook wal es [[ragga]](muffin) eneumd, wat de leste tienjoarn aal mear ellektronies is ewördn, n aander ritme hef ekreegn, en woervan't n antal ärtieste internasjonaal völle kritiek kriegnt, umdet ze homofobe tekste hebt, of tekste dee't oproopt töt geweeld.
+== Soorten reggae ==
+Der sint unmündig vöäle soorten reggae. Dee untstünden döärdat verskillende artisten der nen eygen drai an wilden geaven, of mengen med andere musikstylen. Et gevt under meyr ''roots reggae'' en ''lover's rock''. Disse beide sint wat musikale kenmarken angeyt någenog etselvde, al richt den eyrsten sik meyr up religy en kritik up de samenleaving en geyt et by den tweyden üm de leevde. [[Dubreggae]] untstünd do as jamaikaanske ''selectas'' (DJ's) med instrumentale versys van ''roots'' an et eksperimenteren güngen en der swåre echo-effekten achterhüngen. Dat gavven dubreggae 'n sweaverig karakter med vöäle nådruk up de [[basgitaar]] en [[drums]]. Wyders gevt et noch [[dancehall]], wat upköm in de jåren '80. Dat makeden vanaf dee tyd ne vulleydig eygene untwikkeling döär, med ne verskuving når elektroniske instrumenten en 'n kumpleet ander ritme, wåroaver as vake grimmige teksten oaver geweld en wyve up [[Toasting|toasted]] wordt. Dårnöäst is der ne krüüsbestuving med [[hiphop]], wat ''[[raggamuffin]]'' nöömd wördt. 
 
 == Geluudsvuurbeeld ==
 [[Bestaand:Woolters_-_Wiki_-_Reggae.ogg|n Minuutjen reggae]]
-Um de kenmoarkn van reggae wat dudeliker te maakn is dr n spesjaal geluudsvuurbeeld vuur Wikipedia produseerd. t Begeent met n ''One drop'' drumritme. Doar keump dan t ''noapikn'' bie. Doarnoa heur-j allene drums en basgitaar. Doarnoa drums + basgitaar + noapikn en ''bubble'' (t kenmoarkende örgel). Doarnoa heur-j allene drums + bubble, um eawn good te loatn heurn wat de bubble non feailik is. Doarnoa keump t hele spul bie mekoar, mear dan met bloazers dr bie.
+
+In et begin van bygånd gelüüdsvöärbeald begint de drums in 'n kenmarkend ''one drop''-ritme. Dår kümt et ''nåpikken'' van piano en gitaar by. Dat wördt evolged döär drums + basgitaar + nåpikken en ''bubble'' ('n kenmarkend örgelritme). Den ''bubble'' is dårnå isoleerd te höyren up de drums. Et slut der med af dat allens te houpe dån wördt, med blåsers der by. 
 
 == Reggae in Europa ==
-In [[Pooln]], [[Zweedn]], [[Fraankriek]] en [[Duutslaand]] is reggae onmeundig geleewd en zeent dr völle ärtieste. Ook in t [[Verenigd Keuninkriek]] is reggae van vroger al geleewd, duurdet Jamaikaanse immigraantn de muziek metnömn en in [[Londen]] grote reggaefeeste heuldn. Oet Duutslaand keump de internasjonaal bekeande reggae-artiest [[Gentleman]], ook hef doar de groep [[Seeed]] grote hits ehad. Wieters zeent dr onmeundig völle b-ärtieste en plezeerbandjes. In Pooln he'j de groepn [[Star Guard Muffin]] en [[Rastasize]], dee't nen grootn trop (jonge) volgers hebt. n Zanger van Star Guard Muffin dee met an de Poolse variaant van n internasjonaal taleantnprogramma vuur tellevisie en wus tweede te wordn.Bekeande Fraansken artieste zeent [[Yannick Noah]] en de band [[Kana]]. In Zweedn he'j [[Peps Persson]], woervan't [[Bob Marley]] ooit zea at n ennigsten blaankn is met reggae in t blood. Wieters he'j doar nog [[Papa Dee]] en [[Kapten Röd]]. In [[Finlaand]] haaln [[Jukka Poika]] in 2011 platinum met zin album ''Kylmästä Lämpimään''. In [[Noorweagn]] kriegnt ärtieste [[Nico D]], [[Admiral P]] en [[Jabaman]] aal mear leefhebbers. Den lesten wus zelfs in Jamaika ne kleaine hit te haaln.
+In [[Pooln|Polen]], [[Zweedn|Sweyden]], [[Fraankriek|Frankryk]] en [[Duutslaand|Düütskland]] is reggae unmündig populäär en sint der vöäle artisten. Ouk in et [[Verenigd Keuninkriek|Vereynigd Köäninkriek]] rakeden reggae slim populäär döärdat en grout antal jamaikaanske immigranten et mednöäm en in [[Londen]] groute feasten höäld. De düütske reggaescene is flink egroid en nöömt sik vake med nen knipoug ''Germeika''. Internationaal genöt Tilmann Otto uut [[Osnabrück|Ossenbrügge]] under syne artistenname [[Gentleman]] vöäle anseen. De düütske band [[Seeed]] hevt in eygen land ne groute grup anhangers. Jårliks gevt et groute reggaefestivals, wåras lüde en artisten van oaver de heyle wearld up af kummet. 
 
-In [[Neerlaand]] is reggae nit heel bekeand, de leste Neerlaandse hit köm oet [[Suriname]]: [[Damaru]] met zin ''Mi Rowsu (tuintje in m'n hart)''. Ne grote reggae/[[ska]]band was [[Doe Maar]], dee't verskeaidene ska-hits op naam hebt stoan. Ne aandere bekeande reggaehit was ''Suzanne'' van [[VOF De Kunst]]. De niejste reggaesensasie is [[JAH6]]. Dit is ne samenwoarking van n antal leedn van Beef met [[Suriname|Surinaamsen]] Amsterdammer Herman Havertong, dee't bekeande metzingers van Hollaandse ärtieste op ne reggae- of [[ska]]beat zett. Vearder zeent dr nog verskeaidene meender bekeande artieste en [[sound system]]s. Zo he'j in Eanske ''Herb-a-lize-it'' en n band ''Roots Creation''.
+In Polen deade den vöärsanger van de reggaeband Star Guard Muffin med an nen talentenjagd vöär televisy, wåras hee tweydes wüst te worden. Dat gavven reggae in Polen nen grouten groi. Bekende franske artisten sint Yannick Noah en de band Kana. 
+
+In Sweyden gevt et Peps Persson, wårvan as [[Bob Marley]] seade at et den eanigsten blanken is med reggae in et blood. Wyders gevt et noch Papa Dee en Kapten Röd. In [[Finland]] haalden Jukka Poika in 2011 platimum med syn album Kylmästä Lämpimään. [[Noorweagen|Noorske]] artisten sint under meyr Nico D, Admiral P en Jabaman. Den lätsten wüst in Jamaika ne kleine hit te halen.
+
+In [[Nederlaand|Neaderland]] blivt reggae altyd lük under den radar of ne eynmålige angeleagenheid. Ne groute subkultuur gevt et neet. De lätste groute reggaehit (Damaru med ''Mi Rowsu (tuintje in m'n hart)'') köm uut [[Suriname]]. Ne groute reggae/[[ska]]-band was Doe Maar uut de jåren '80, dee as verskeidene neaderlandske ska-hits up name hebt, wårvan as ''Sinds 1 dag of 2 (32 Jaar)'' wellicht de grötste nöömd kan worden. De band [[Beef]] had 'n antal sommerhits en de jåren nul. Ouk was der kort andacht vöär de band JAH6, dee nummers van den amsterdamsken volkssanger André Hazes up reggae en skamusik makeden. 
+
+Wyders gevt et in Neaderland en antal [[soundsystem]]<nowiki/>s.
 
 === Neersassies gebeed ===
 In t Neerlaands-[[Neersassies]]e gebeed zeent nit völle ärtieste dee't zik eankelt met reggae bezig hooldt. Oet [[Hengel (Oaveriessel)|Hengel]] keump n reggaeband ''Roots Creation'', mer dee zingt nit in t Plat. Vake zeent t wat strekgebeundn b-ärtieste, dee't al nen redeliken naam hebt, dee't zik ne heel eankele keer an reggae woagnt. Vuurbeelde hiervan zeent [[Rooie Rinus]] en [[Pé Daalemmer]] oet [[Grönningen]] met t nummer ''Bie de Lidl''. Wieders hef n [[Achterhook]]sen [[boerenrock]]band [[Normaal]] verskeaidene (half)reggaenummers maakt, zo as ''Wiet is niet ver'' en ''Ik mos pissen'', en nen aanderen Achterhooksen band, [[Boh Foi Toch]] maakn t versken '''t Hundjen''.
@@ -83,7 +90,7 @@ Internasjonaal:
 * [[Bunny Wailer]] (oold-bandlid van Bob Marley den't vuur zikzelf is begunn)
 * [[Culture]] 
 * [[Freddy McGregor]]
-* [[Gentleman]] (Duutsen reggaezänger den't noar Jamaika is egoan.
+* [[Gentleman]] (Duutsen reggaezänger den't noar Jamaika is egoan).
 * [[Jimmy Cliff]] (hef verskeaidene wearldhits op naam)
 * [[Luciano]]
 * [[Lucky Dube]] (Meest succesvolle artiest oet [[Zuud-Afrika]])
