--- a/Ansluting_Zwolle-Centrum.mw
+++ b/Ansluting_Zwolle-Centrum.mw
@@ -1,7 +1,7 @@
 [[ofbeelding:A28 richting Zwolle-Centrum thv afrit 19.jpg|thumb|400px|A28 richting Zwolle-Centrum (2006) bi'j ofrit 19 toe as de plusstrook nog opheuld tussen Zwolle-Centrum en Zwolle-Zuud]]
 De '''ansluting Zwolle-Centrum''' is een [[ansluting]] in de [[Rieksweg 28|A28]]. Het hef de vörm van een [[haorlemmermeeransluting]] en et nommer van de ansluting is 19.
 
-Tussen [[Ansluting Zwolle-Zuud|Zwolle-Zuud]] en lig een parrallelstructuur. Disse parrallelstructuur hold op bi'j Zwolle-Centrum en wieder naor [[Ansluting Zwolle-Noord|Zwolle-Noord]] he-j een [[plusstrook]], twie normale riejstroken en een [[weafstrook]] per richting. Tussen Zwolle-Centrum en Zwolle-Zuud he-j een 1+3+3+1-parrallelstructuur waorbi'j ien van de drie riejstroken een plusstrook is. Daornaost he-j ok nog een weafstrook op de parrallelbaan.
+Tussen [[Ansluting Zwolle-Zuud|Zwolle-Zuud]] en lig een parrallelstructuur. Disse parrallelstructuur hold op bi'j Zwolle-Centrum en wieder naor [[Ansluting Zwolle-Noord|Zwolle-Noord]] he-j een [[plusstrook]], twie normale riejstroken en een [[weafstrook]] per richting. Tussen Zwolle-Centrum en Zwolle-Zuud he-j een 1+3+3+1-parrallelstructuur waorbi'j ien van de drie riejstroken een plusstrook is. Daornaost he-j ok nog een weafstrook op de parrallelbaan, waordeur er feitelik 2+3+3+2 riejstroken bint.
 
 == Verkeersintensiteiten ==
 In [[2019]] reden er 118.700 voertugen tussen Zwolle-Zuud en Zwolle-Centrum en 119.800 tussen Zwolle-Centrum en Zwolle-Noord. In 2006 waren dit er nog 99.000 en 91.000.
