--- a/Rieksweg_28.mw
+++ b/Rieksweg_28.mw
@@ -9,7 +9,7 @@ In 1996 is een [[spitsstrook]] lös edaone tussen [[Ansluuting Den Dolder|Den Do
 
 Al jaorenlange was de A28 bi'j Zwolle oaverbelast en gedieltes bi'j Zwolle stunden in de [[Filetop 50]]. In [[2002]] en [[2003]] bint weafstroken op de [[Vechtbrugge]] epläätst. In 2004 bint [[Plustrook|plustroken]] neer elegd tussen [[Ansluuting Zwolle-Centrum|Zwolle-Centrum]] en [[Ommen (ofslag)|Ommen]] wat er veur ezörgt hef det et knelpunt in Zwolle (bi'j Zwolle-Centrum) nao de [[Iesselbrugge]] en bi'j Ommen verplaatst is. In [[2010]] en [[2011]] is de A28 tussen [[Knooppunt Hattemerbroek]] en [[Ansluuting Zwolle-Zuud|Zwolle-Zuud]] van 2x2+weafstrook nao 2x4 wieder emääkt. Daorbi'j is de plusstrook bi'j Zwolle-Centrum langer emääkt töt an Zwolle-Zuud. Tussen Ommen en [[Knooppunt Lankhorst]] is de A28 van 2x2 nao 2x3 riejstroken verbreed. Dit hef ervoor ezörgt det de dagelikse files in de ochtend bi'j [[Stappest]] en [[Ansluuting Ni'jluzen|Ni'jluzen]] en s'aovends bi'j Zwolle-Zuud en Ommen vot egaone bint. Deur et wieder mäken van de A28 bi'j Zwolle is de snelweg hier uut de Filetop 50 egaon en is de [[filedrok]] flink verminderd. 
 
-In [[2009]] is [[Knooppunt Lankhorst]] compleet emääkt. Vrogger ha-j hier allenig een splitsing, sunds 2009 ku-j hier ok van Meppelt nao Hoogeveane en andersumme. Vrogger mos et verkeer van disse richtings bi'j [[Ansluuting De Wiek|De Wiek]] en [[Ansluting Meppel]] ([[A32]]) van de snelweg of.
+In [[2009]] is [[Knooppunt Lankhorst]] compleet emääkt. Vrogger ha-j hier allenig een splitsing, sunds 2009 ku-j hier ok van Meppelt nao Hoogeveane en andersumme. Vrogger mos et verkeer van disse richtings bi'j [[Ansluuting De Wiek|De Wiek]] en [[Ansluting Meppel|Meppel]] ([[A32]]) van de snelweg of.
 
 == Datum van ingebruukname van traject<ref>wegenwiki.nl A28</ref> ==
 {| class="wikitable"
