--- a/Meanse,_dörf_te_leven.mw
+++ b/Meanse,_dörf_te_leven.mw
@@ -1,4 +1,4 @@
-[[Bild:DirkWitteLeiden2020.jpg|thumb|''Mens, durf te leven!'' ([[Leidn]], 2020)]]
+[[File:DirkWitteLeiden2020.jpg|thumb|''Mens, durf te leven!'' ([[Leidn]], 2020)]]
 '''Menske, dürv te leaven''' (oorsprüngelik, neaderlandsk: '''Mens, durf te leven''') is een neaderlandsktalig leed üüt [[1917]], oorsprüngelik eskreaven en ouk sülv esüngen döär [[Dirk Witte]]. In de eyrtydske neaderlandske spelling heytten et noch: ''"Mensch, durf te leven."''
 
 Teegenwoordig is et eyne van de klassikers üüt de neaderlandsktalige musik.
