--- a/Ansluting_Ni'jlusen.mw
+++ b/Ansluting_Ni'jlusen.mw
@@ -6,6 +6,6 @@ De ansluting is een an epaste haorlemmermeeransluting. De ofrit vanuut [[Ansluti
 In  [[2000]] is er [[toeritdosseerinstallatie]] eplaatst veur de oprit nao Zwolle hen en later ok in de richting van Stappest. In [[2010]] en [[2011]] is de A28 tussen Ommen en [[Knooppunt Lankhorst]] wieder emääkt. In [[2010]] bint ook de twie kruuspunten met de N377 veraanderd daoras er meer riejstroken eplaatst bint. Dit hef er veur ezörgd det er gien lange wachtriejen meer bint veur de twie kruusings.
 
 == Verkeersintensiteiten ==
-In [[2019]] reden er 90.700 voertugen van Ommen naor Ni'jlusen en 86.100 wieder naor Stappest. In [[2018]] reden er 17.200 voertugen vanuut [[Ni'jlusen]] naor de twie kruusings en 6.900 wieder naor [[Asselt|Hasselt]].
+In [[2019]] reden er 90.700 voertugen van Ommen naor Ni'jlusen en 86.100 wieder naor Stappest<ref>INWEVA 2019</ref>. In [[2004]] waren dit er nog 73.800 en 73.500<ref>Jaarrapport verkeersintensiteiten 2004 Ommen-Nieuwleusen en Nieuwleusen-Staphorst</ref>. In [[2018]] reden er 17.200 voertugen vanuut [[Ni'jlusen]] naor de twie kruusings en 6.900 wieder naor [[Asselt|Hasselt]].
 {{Dialekt|sdz}}
 [[Kategorie:Rieksweg 28]]
