--- a/Ansluting_Ommen_(A28).mw
+++ b/Ansluting_Ommen_(A28).mw
@@ -3,7 +3,7 @@
 In [[1968]]/[[1970]] is de ansluting lös edaone. Tussen [[2002]] en [[2003]] bint er [[Weafstrook|weafstroken]] an elegd tussen Zwolle-Noord en Ommen. In [[2004]] kwamen er [[Plusstrook|plusstroken]] tussen [[Ansluting Zwolle-Zuud|Zwolle-Zuud]] en Ommen. In [[2010]] en [[2011]] is de A28 tussen ansluting Ommen en [[Knooppunt Lankhorst]] wieder emääkt nao 2x3 riejstroken. Hierdeur bint de dagelikse files körtbi'j de ofslag waoras de plusstrook vanuut Zwolle stopten, vot egaone. In [[2002]] en [[2003]] bint er ook [[Weafstrook|weafstroken]] an elegd op de [[Vechtbrugge]] töt an ansluting Ommen.
 
 == Verkeersintensiteiten ==
-Tussen [[Ansluting Zwolle-Noord|Zwolle-Noord]] en Ommen reden in [[2019]] 120.000 voertugen en wieder töt [[Ansluting Ni'jlusen|Ni'jluzen]] 90.700. Op de Ordelseweg töt an de Kranerburgweg reden in [[2019]] 17.600 voertugen, op de Kranerburgweg 24.000 en richting [[Dalsen]] 18.100.
+Tussen [[Ansluting Zwolle-Noord|Zwolle-Noord]] en Ommen reden in [[2019]] 120.000 voertugen en wieder töt [[Ansluting Ni'jlusen|Ni'jluzen]] 90.700<ref>INWEVA 2019</ref>. Op de Ordelseweg töt an de Kranerburgweg reden in [[2019]] 17.600 voertugen, op de Kranerburgweg 24.000 en richting [[Dalsen]] 18.100<ref>Atlas van Overijssel</ref>.
 
 {{Dialekt|sdz}}
 
