*Empty MediaWiki Message*

--- a/Ansluting_Ommen_(A28).mw
+++ b/Ansluting_Ommen_(A28).mw
@@ -5,6 +5,7 @@ In [[1968]]/[[1970]] is de ansluting lös edaone. Tussen [[2002]] en [[2003]] bi
 == Verkeersintensiteiten ==
 Tussen [[Ansluting Zwolle-Noord|Zwolle-Noord]] en Ommen reden in [[2019]] 120.000 voertugen en wieder töt [[Ansluting Ni'jlusen|Ni'jluzen]] 90.700<ref>INWEVA 2019</ref>. Op de Ordelseweg töt an de Kranerburgweg reden in [[2019]] 17.600 voertugen, op de Kranerburgweg 24.000 en richting [[Dalsen]] 18.100<ref>Atlas van Overijssel</ref>.
 
+== Verwiezings ==
+<references/>
 {{Dialekt|sdz}}
-
 [[Kategorie:Rieksweg 28]]
