*Empty MediaWiki Message*

--- a/Ansluting_Zwolle-Centrum.mw
+++ b/Ansluting_Zwolle-Centrum.mw
@@ -6,6 +6,9 @@ Tussen [[Ansluting Zwolle-Zuud|Zwolle-Zuud]] en lig een parrallelstructuur. Diss
 In [[2004]] bint er plusstroken an elegd tussen Zwolle-Zuud en [[Ansluting Ommen (A28)|Ommen]]. In [[2010]] en [[2010|2011]] is de de A28 tussen [[Knooppunt Hattemerbroek]] en [[Ansluting Zwolle-Zuud|Zwolle-Zuud]] wieder emaakt nao 2x4 riejstroken. De plusstrook is hier deur etrökken töt de Iesselbrugge.
 
 == Verkeersintensiteiten ==
-In [[2019]] reden er 118.700 voertugen tussen Zwolle-Zuud en Zwolle-Centrum en 119.800 tussen Zwolle-Centrum en Zwolle-Noord. In 2006 waren dit er nog 99.000 en 91.000.
+In [[2019]] reden er 118.700 voertugen tussen Zwolle-Zuud en Zwolle-Centrum en 119.800 tussen Zwolle-Centrum en Zwolle-Noord<ref>INWEVA 2019</ref>. In 2006 waren dit er nog 99.000 en 91.000<ref>INWEVA 2006</ref>.
+
+== Verwiezings ==
+<references/>
 {{Dialekt|sdz}}
 [[Kategorie:Rieksweg 28]]
