--- a/Höllenboer.mw
+++ b/Höllenboer.mw
@@ -11,7 +11,13 @@ Op [[28 april]] [[2000]] gafn Höllenboer een ofskeaidskonsert. Ze doot of en to
 ==Diskografie==
 
 ===Singles===
-* ''Het busje komt zo'' (1995) 
+* ''Weekend'' (1989)
+* ''God van de dos'' (1993)
+* ''Verduvelde Wieve'' (1995)
+* ''Het busje komt zo'' (1995)
+* ''Ik word prof'' (1996)
+* ''Sie Braand'' (1997)
+* ''Geile Vla'' (2017)
 
 ===Albums===
 * ''Muj goed kiek'n wa'k zeg'' (1993) 
