*Empty MediaWiki Message*

--- a/Weagenbouwkunde.mw
+++ b/Weagenbouwkunde.mw
@@ -1,3 +1,4 @@
+{{Begin}}
 [[ofbeelding:Road building Timor Leste 2010.jpg|thumb|450px|Et anleggen van een weg in [[Oost-Timor]]]]
 '''Weagenbouwkunde''' is een kunnigheid die zik ganks hold met de bouw van [[Weg|weagen]]. Et is een [[toe-epaste wettenschop]] en onderdiel van de [[civiele techniek]].
 
