--- a/Brugge.mw
+++ b/Brugge.mw
@@ -1,8 +1,8 @@
 '''Brugge''' of '''brogge''' kan verwiezen naor:
 
-* [[Brugge (stad)]] - de [[heufdstad|previnsieheufstad]] van 't Belgische [[Westfloandern|West-Vlaanderen]]
+* [[Brugge (stad)]] - de heufdstad van de Belgische previnsie West-Vlaanderen
 * [[Brogge (bouwwark)]] - een verbiending tussen twee walkaanten veur verkeer over 't waoter hinne
 * [[Brogge (taandheelkunde)]] - taandheelkundige constructie in de mond
-* ''Brogge'' - een aander woord veur een [[brukjen]] (stuk [[brood]])
+* ''Brogge'' - een aander woord veur een [[brukjen]] (stuk brood)
 
 {{dv}}
