/* Drenthe */ Ka(r)ssies, Kerssies

--- a/Nedersaksische_achternamen.mw
+++ b/Nedersaksische_achternamen.mw
@@ -196,6 +196,8 @@ Hieronder vie'j n lieste achternamen mit n [[Nedersaksies]]e herkomst of die veu
 |-
 |Jalvingh|| adresname
 |-
+|Ka(r)ssies, Kerssies|| patroniem (van Karst)
+|-
 |Lohues, Lohuis|| adresname
 |-
 |Luchies|| patroniem
