/* Drenthe, Kop van Oaveriessel, Sallaand */ Mannes

--- a/Nedersaksische_veurnamen.mw
+++ b/Nedersaksische_veurnamen.mw
@@ -137,7 +137,7 @@
 |-
 |Maaie ''(v)''|| ''gien''
 |-
-|Mans ''(m)''|| Herman(nus)
+|Mannes, Mans ''(m)''|| Herman(nus)
 |-
 |Marregien, Merregien ''(v)''|| Marrigje, Maria
 |-
