[[:Kategorie:Nederlaands grapnmaker]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Jan_Riesewijk.mw
+++ b/Jan_Riesewijk.mw
@@ -1,10 +1,12 @@
-'''Jan Riesewijk''' ([[Losser|Loster]], [[1976]]) is nen twentsken komik en aktöör. De meyste bekendheid hevt he te danken an syne rulle in de regiosoap [[Van Jonge Leu en Oale Groond]], wårin as he den bröder spölden van en karakter van [[Herman Finkers]]. Dårnöäst is hee te seen weasd as ''Wilco'' in de komedyryge [[Groote Markt 30]]. Ouk hevt hee medhülpen an de Twentske Oldjårskonference van 2019.
+'''Jan Riesewijk''' ([[Loster]], [[1976]]) is nen twentsken komik en aktöör. De meyste bekendheid hevt he te danken an syne rulle in de regiosoap [[Van Jonge Leu en Oale Groond]], wårin as he den bröder spölden van en karakter van [[Herman Finkers]]. Dårnöäst is hee te seen weasd as ''Wilco'' in de komedyryge [[Groote Markt 30]]. Ouk hevt hee medhülpen an de Twentske Oldjårskonference van 2019.
 
 Riesewijk tredt noch wal es up vöär [[RTV Oost]]. Mangs is hee te seen as ''Kardinaal Riesewijk''. Dårby spölt hee nen kardinaal den as de lüde "vermanend" tosprekt. Ne rulle den as em past, want Riesewijk is oavertüügd [[Rooms-Katholieke Karke|Roumsk-Katolik]].
 
-'''Persöönlik'''
+==Persöönlik==
 
 In et dageliks leaven is Riesewijk verpleyger in en tehuus vöär [[Dementy|dementerende]] ölderen. In de vrye tyd düt he noch med med de ''Böggelrieders & Daansers'', ne lokale drachtengrup. Ouk is hee ''Buitengewoon Ambtenaar van de Burgerlijke Stand'' in Loster en düt he lokaal huweliksplechtigheiden an mekander küren.
 
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Akteur]]
+{{DEFAULTSORT:Riesewijk, Jan}}
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Akteur]]
+[[Kategorie:Nederlaands grapnmaker]]
