*Empty MediaWiki Message*

--- a/Ria_Westerhuis.mw
+++ b/Ria_Westerhuis.mw
@@ -11,9 +11,9 @@ In oktober 2009 kwaamp de cd ''Dichter bij elkaar'' uut, mit vier Drèentse en z
 
 In febrewaori 2011 verscheen de bundel ''Zundags goed'' mit zeuventig ni'je Drèentse gedichten.
 
-Ok in het Nederlaands kwam der een bundel uut, in 2013 was daor Teugelloos in eigen beheer
+Ok in het Nederlaands kwaamp der een bundel uut, in 2013 was daor Teugelloos in eigen beheer
 
-Daorna schreef ze nog Nachtsleutel in 2015 met gedichten in het Drèents én in het Nederlands.
+Daorna schreef ze nog Nachtsleutel in 2015 met gedichten in het Drèents én in het Nederlaands.
 
 Wieder organiseert en prissenteert Westerhuis veurdrachtaovends, vertaalt ze gedichten in 't Drèents, schrif ze gedichten in opdracht en ontwarpt ze wenskaorten.
 
