--- a/10e_millennium_v._Chr..mw
+++ b/10e_millennium_v._Chr..mw
@@ -1,5 +1,7 @@
 [[ofbeelding:Göbekli Tepe, Urfa.jpg|thumb|300px|Tempel gebeuren bi'j [[Göbekli Tepe]] ([[Turkije]])]]
 [[ofbeelding:Fondazione Passaré V27 287.jpg|thumb|300px|Veurbield van rotskunst uut de [[Sahara]]: [[giraffe]]n ([[Anakom]], [[Niger (laand)|Niger]])]]
-Het '''tiende millenium veur Christus''' löp van 10.000 töt 9.001 veur Christus. Het wördt ekenmärkt deur völle veraanderings in et [[klimaat|klimaot]], de [[geologie]] en het [[fauna|dierenriek]]. Völle dieren van de '[[megafauna]]' stärft uut, waoronder de [[mammoet]], de [[wolhaorige neushoorn]] en Amerikaanse [[peerd]]esoorten. Deur het opwärmend klimaot trökken de [[Gletsjer|gletsjers]] in Europa zik steeds wieder terugge richting [[Scandinavië]]. Deur et stiengen van de zeespiegel is dit het letste millenium dät [[Engelaand]] nog an de rest van Europa vaste zit. Tussen [[Ruslaand]] en [[Alaska]] is de [[Beringlaandbrug|Beringlaandbrugge]] wier lös. In het uuterste zuden van [[Zuud-Amerika]] bint er dan al meansen vinden. {{Dialekt|sdz}}
+Het '''tiende millenium veur Christus''' löp van 10.000 töt 9.001 veur Christus. Het wördt ekenmärkt deur völle veraanderings in et [[klimaat|klimaot]], de [[geologie]] en het [[fauna|dierenriek]]. Völle dieren van de '[[megafauna]]' stärft uut, waoronder de [[mammoet]], de [[wolhaorige neushoorn]] en Amerikaanse [[peerd]]esoorten. Deur het opwärmend klimaot trökken de [[Gletsjer|gletsjers]] in Europa zik steeds wieder terugge richting [[Scandinavië]]. Deur et stiengen van de zeespiegel is dit het letste millenium dät [[Groot-Brittannie|Engelaand]] nog an de rest van Europa vaste zit. Tussen [[Ruslaand]] en [[Alaska]] is de [[Beringlaandbrug|Beringlaandbrugge]] wier lös. In het uuterste zuden van [[Zuud-Amerika]] bint er dan al meansen vinden.
+
+{{Dialekt|sdz}}
 
 [[Kategorie:Geschiedenis naor periode]]
