Verwysing nå döärverwyssyde repareerd ([[De Wiek]] nå [[De Wiek (Drenthe)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Ria_Westerhuis.mw
+++ b/Ria_Westerhuis.mw
@@ -1,7 +1,7 @@
 [[Ofbeelding:WesterhuisRieverst.jpg|thumb|right|400px|Kwatrijn deur Ria Westerhuis aover de stroom de [[Riest (revier)|Riest]], in 't dörp [[De Rieverst]] (Stappest), meie 2020]]
 '''Ria Westerhuis''' ([[Old-Averiest]], 1959) is een schriefster van gedichten, liedteksten en verhalen in 't [[Drèents]] en 't [[Nederlaands]].
 
-Westerhuis is op-egruuid op Old-Averiest en verhuusde in 1980 naor [[De Wiek]]. Sinds 2004 is ze mit schriefwark bezig; ze publiceert onder meer in 't Drèentse literaire tiedschrift ''[[Roet (tiedschrift)|Roet]]''.
+Westerhuis is op-egruuid op Old-Averiest en verhuusde in 1980 naor [[De Wiek (Drenthe)|De Wiek]]. Sinds 2004 is ze mit schriefwark bezig; ze publiceert onder meer in 't Drèentse literaire tiedschrift ''[[Roet (tiedschrift)|Roet]]''.
 
 Veur zanger-pianist [[Geert Jan Brader]] zien cd ''Nog zoveul doen'' (2009) hef Westerhuis een köppel liedteksten eschreven. Ok schrif ze teksten veur de [[Stichting Drentse Muziek Maatschappij]].
 
@@ -22,7 +22,6 @@ Wieder organiseert en prissenteert Westerhuis veurdrachtaovends, vertaalt ze ged
 *[http://www.riawesterhuis.nl De webstee van Ria Westerhuis]
 
 {{DEFAULTSORT:Westerhuis, Ria}}
-
 [[Kategorie:Drèents artikel]]
 [[Kategorie:Schriever in 't Drèents]]
 [[Kategorie:Tekstschriever]]
