--- a/Yared_Dibaba.mw
+++ b/Yared_Dibaba.mw
@@ -8,9 +8,9 @@ Hee was in de familieriege '' Die Ohnsorgs'' bie n [[Nord-Deutsche Rundfunk|NDR]
 Dibaba is trouwd en hef twee kinder. He leewt met ziene familie in [[Altno]].
 
 ==Oetgoande koppelink==
-
 * [http://www.yared.de/ Websteed van Yared Dibaba] (Hoogduuts)
 
+{{DEFAULTSORT:Dibaba, Yared}}
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Tillevisie]]
 [[Kategorie:Prissentator]]
