--- a/Gerard_Ekdom.mw
+++ b/Gerard_Ekdom.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding: Gerard Ekdom en zeeuwier cropped.jpg|thumb|right|200px|Gerard Ekdom]]
+[[Ofbeelding: Gerard Ekdom en zeeuwier cropped.jpg|thumb|200px|Gerard Ekdom]]
 '''Gerard Ekdom''' ([[Utrecht (stad)|Utrecht]], [[26 meert|26 meart]] [[1978]]) is ne [[Neerlaandse]] [[radiomaker]] en [[tellevisie]]prissentator. 
 
 September 2001 dut he alle woarkdeage t langst nog bestoande radioprogramma van de wearld, ''Arbeidsvitaminen'', verzörgen. In t begin leup t programma van 9.00 uur töt 12.00 uur, mer seend [[1 september]] [[2008]] hef he t eerste uur in eleawerd op [[Giel Beelen]]. Vanof [[6 september]] [[2010]] zal hee van moandag töt en met doonderdag n niej programma goan maakn: ''Effe Ekdom'', wat zal loopn tusken 12.00 uur en 14.00 uur.
@@ -24,11 +24,12 @@ Ekdom hef in zin programma n antal standaard oetsproakn, dee't duur zinne anhang
 *''Eine Deutsche Schallplatte!'' 
 
 ==Oetgoande verbeendige==
-*[http://www.ekdom.nl Ekdom zin eegne webstea]
+*[http://www.ekdom.nl/ Ekdom zin eegne webstea]
 *[http://www.twitter.com/gerardekdom Ekdom's  twitterziede]
 *[http://www.3fm.nl/page/djs/Gerard Profielbeskriewige op 3FM.nl]
 {{commonscat}}
 
+{{DEFAULTSORT:Ekdom, Gerard}}
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Radio]]
 [[Kategorie: Prissentator]]
