--- a/Jelmer_Gussinklo.mw
+++ b/Jelmer_Gussinklo.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Jelmer Gussinklo.jpg|thumb|right|Jelmer Gussinklo]]
+[[Ofbeelding:Jelmer Gussinklo.jpg|thumb|Jelmer Gussinklo]]
 '''Jelmer Gussinklo''' (geboarn [[14 januari]] [[1982]] [[Wenters]], op egreujd in [[Iezerlo]] bi-j [[Aalten]]),  is nen [[Nederlaand]]sen radioprissentator.
 
 Hee begon as radiotechnikus veur et de [[Nederlands Omroepproductie Bedrijf|NOB]]. Too [[Rob Stenders]] verhuzen van [[3FM]] noar [[Yorin FM]] nam e Gussinklo met. Den kump doarmet dan ok geregeld op de radio. Hee maken onder meer ne [[Achterhook]]se parodie op et nummer ''[[Watskeburt]]'' van [[De Jeugd van Tegenwoordig (groep)|De Jeugd van Tegenwoordig]]. Ok was e te heurn as [[sidekick]] (dat wil zeggen: ko-prissentator, angevver, assistent-DJ) in et radioprogramma van [[Henk Westbroek]].
@@ -12,6 +12,8 @@ Et nummer ''Dom, lomp en famous'' wodden um ezat in ''Klein, stoer en boer'', en
 In [[januari 2006]] leerdn Nederlaand Jelmer kennen as [[streaker]]: hee renden in de blote konte et veld op tiedens den wedstried [[Sparta Rotterdam|Sparta]]-[[N.E.C.|NEC]].
 
 {{commonscat}}
+
+{{DEFAULTSORT:Gussinklo, Jelmer}}
 [[Kategorie:Achterhooks artikel]]
 [[Kategorie:Prissentator]]
 [[Kategorie:Radio]]
