--- a/Paul_Schabbink.mw
+++ b/Paul_Schabbink.mw
@@ -10,10 +10,10 @@ Hee dut skoonwal nog aait leedkes maakn vuur de Goorse School- & Volksfeesten en
 ==Perseunlik==
 Schabbink wont nog aait in Goor, is trouwd en hef twee zöns.
 
-
 ==Oetgoande kopling==
-*[http://paulschabbink.nl Perseunlike webstea]
+*[http://paulschabbink.nl/ Perseunlike webstea]
 
+{{DEFAULTSORT:Schabbink, Paul}}
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Tillevisie]]
 [[Kategorie:Prissentator]]
