[[:Kategorie:Prissentator]] weg-ehaald; [[:Kategorie:Nederlaands presentator]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Harm_Agteresch.mw
+++ b/Harm_Agteresch.mw
@@ -69,4 +69,4 @@ CD's samen met aandern:
 [[Kategorie:Nedersaksiese humor]]
 [[Kategorie:Tukker]]
 [[Kategorie:Oaveriessel]]
-[[Kategorie:Prissentator]]
+[[Kategorie:Nederlaands presentator]]
