[[:Kategorie:Prissentator]] weg-ehaald; [[:Kategorie:Nederlaands presentator]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Marga_Bult.mw
+++ b/Marga_Bult.mw
@@ -33,6 +33,6 @@ RTV Oost maakn van Bult zin leawn ne 8-delige [[realitysoap]] oonder n naam "Een
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Nederlaandse zanger]]
 [[Kategorie:Akteur]]
-[[Kategorie:Prissentator]]
+[[Kategorie:Nederlaands presentator]]
 [[Kategorie:Tukker]]
 [[Kategorie:Muzikaant uut Oaveriessel]]
