[[:Kategorie:Prissentator]] weg-ehaald; [[:Kategorie:Nederlaands presentator]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Gerard_Ekdom.mw
+++ b/Gerard_Ekdom.mw
@@ -32,4 +32,4 @@ Ekdom hef in zin programma n antal standaard oetsproakn, dee't duur zinne anhang
 {{DEFAULTSORT:Ekdom, Gerard}}
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Radio]]
-[[Kategorie: Prissentator]]
+[[Kategorie:Nederlaands presentator]]
