--- a/Willie_Oosterhuis.mw
+++ b/Willie_Oosterhuis.mw
@@ -11,5 +11,5 @@ Op 14 juli 2009 kreeg e nao 't hardlopen een hartanval.<ref>[http://www.tctubant
 
 {{DEFAULTSORT:Oosterhuis, Willie}}
 [[Kategorie:Sallaands artikel]]
-[[Kategorie:Prissentator]]
+[[Kategorie:Nederlaands presentator]]
 [[Kategorie:Oaveriessel]]
