[[:Kategorie:Prissentator]] weg-ehaald; [[:Kategorie:Nederlaands presentator]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Arie_Ribbers.mw
+++ b/Arie_Ribbers.mw
@@ -21,5 +21,5 @@ Hee skrif veur Naober, et Landleaven en näölstukken in de Stentor, en is e sam
 [[Kategorie:Achterhooks artikel]]
 [[Kategorie:Achterhook]]
 [[Kategorie:Nedersaksiese leu]]
-[[Kategorie:Prissentator]]
+[[Kategorie:Nederlaands presentator]]
 [[Kategorie:Taolkundige]]
