[[:Kategorie:Prissentator]] weg-ehaald; [[:Kategorie:Nederlaands presentator]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Paul_Schabbink.mw
+++ b/Paul_Schabbink.mw
@@ -16,4 +16,4 @@ Schabbink wont nog aait in Goor, is trouwd en hef twee zöns.
 {{DEFAULTSORT:Schabbink, Paul}}
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Tillevisie]]
-[[Kategorie:Prissentator]]
+[[Kategorie:Nederlaands presentator]]
