[[:Kategorie:Prissentator]] weg-ehaald; [[:Kategorie:Nederlaands presentator]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Monique_Sleiderink.mw
+++ b/Monique_Sleiderink.mw
@@ -8,6 +8,6 @@ In [[1994]] kwaamp ze as bureauredacteur bi'j RTV Oost te warken. Ze much al rap
 
 {{DEFAULTSORT:Sleiderink, Monique}}
 [[Kategorie:Drèents_artikel]]
-[[Kategorie:Prissentator]]
+[[Kategorie:Nederlaands presentator]]
 [[Kategorie:Tillevisie]]
 [[Kategorie:Radio]]
