[[:Kategorie:Nederlaandse politieke parti'je]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Forum_voor_Democratie.mw
+++ b/Forum_voor_Democratie.mw
@@ -6,3 +6,5 @@ De parti'je wier in [[2015]] op ericht as n [[denktank]] deur [[Thierry Baudet]]
 <references/>
 
 {{Dialekt|sdz}}
+
+[[Kategorie:Nederlaandse politieke parti'je]]
