Sortering van [[:Kategorie:50Plus]] anpasd naor " " ([[Wikipedia:HotCat|HotCat.js]])

--- a/50Plus.mw
+++ b/50Plus.mw
@@ -3,4 +3,4 @@
 [[Liesttrekker]] bi'j de [[Tweeden Kamerverkezingen 2012]] en viseveurzitter is [[Henk Krol]]. Nao dee verkezingen kwaamp de parti'je veur t eerst in den [[Tweeden Kamer]], met twee zettels.
 
 {{Dialekt|act}}
-[[Kategorie:50Plus]]
+[[Kategorie:50Plus| ]]
