--- a/Bökkers.mw
+++ b/Bökkers.mw
@@ -28,6 +28,36 @@ Dårnöäst bint verskillende [[singles]] verskeynen. 3 november (2017) kwam et 
 
 In 2019 is et nye album üütekommen under de name ''Leaven in de brouweri-je''. De klip is upenömmen in de fabrik van [[Grolsch]].
 
+==[[Radio 2]] [[Top 2000]]==
+{| class="wikitable" style="text-align:center;"
+|-
+!Nummer in de Top 2000
+!'99||'00||'01||'02||'03||'04||'05||'06||'07||'08||'09||'10||'11||'12||'13||'14||'15||'16||'17||'18||'19
+|-
+!''Iederene hef een reden''
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|
+|1674
+|1303
+|'''680'''
+|}
+
 ==Verwysings==
 <references/>
 
