/* Radio 2 Top 2000 */ zo veul kolommen bennen toch nich nödig?

--- a/Bökkers.mw
+++ b/Bökkers.mw
@@ -32,27 +32,10 @@ In 2019 is et nye album üütekommen under de name ''Leaven in de brouweri-je''.
 {| class="wikitable" style="text-align:center;"
 |-
 !Nummer in de Top 2000
-!'99||'00||'01||'02||'03||'04||'05||'06||'07||'08||'09||'10||'11||'12||'13||'14||'15||'16||'17||'18||'19
+!'99 – '16||'17||'18||'19
 |-
 !''Iederene hef een reden''
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
-|
+|(gyn vermelding)
 |1674
 |1303
 |'''680'''
