--- a/Sijpkes.mw
+++ b/Sijpkes.mw
@@ -3,7 +3,7 @@
 
 ==Historie==
 [[Bestaand:Sijpkes-210.jpg|miniatuur|n Bus van Sijpkes, Göteborg (Zweden), 1994]]
-Pieter Sijpkes begun in 1895 as omnibusondernemer<ref name="Hofman">Hofman, Beno (2015). ''Van omnibus tot Q-link: de geschiedenis van het busvervoer in Groningen en Drenthe''. OV-Bureau Groningen Drenthe, Assen. ISBN 978-90-77989-82-1.</ref><ref name="LangsDeWegen">[https://langs-de-wegen-s.jimdofree.com/sijpkes/ Langs de Wegen: Sijpkes], Autobus Documentatie Vereniging.</ref> in [[Drìntse Monden | Bunerveen]] mit n lijndienst tussen [[Börger]] en [[Knoal (dörp) | Knoal]]<ref name="ArtikelOmnibusBorger">[https://resolver.kb.nl/resolve?urn=MMDA03:000103613:mpeg21:a0006 Artikel in de Provinciale Drentsche en Asser courant (27 augustus 1897)].</ref> en loater ook tussen Bunerveen en [[Assen]]<ref name="ArtikelOmnibusAssen">[https://resolver.kb.nl/resolve?urn=MMDA03:000107110:mpeg21:a0026 Omnibusdienst Buinerveen-Assen], Provinciale Drentsche en Asser courant (15 april 1899).</ref>. t Bedrief gruide in de loop der tied uut tot n grode reisorganisoatsie<ref name="ArtikelHarmSijpkes">[https://resolver.kb.nl/resolve?urn=ddd:011018445:mpeg21:a0588 'We hebben onze body zo breed mogelijk gemaakt'], Nieuwsblad van het Noorden (29 april 1989).</ref>, onder aander deur de overnoame van [[Bergman's Autodienst | Bergman]] (1974), [[Reiscentrale Twente]] (RCT) (1975), [[Elema-Stollenga's Autodiensten | ESA]] (1985) en [[Harmanni]] (1990), en har busgarages in Knoal, Assen, [[Zwolle]] en [[Moarum]]. Sijpkes was aandeelhouder van de laandeleke touroperator De Jong Intra en har reisbureaus in Knoal, [[Troapel]], Grunnen, [[Veendaam]], [[n Daam | Appengedaam]], [[Hoogkìrk | Hoogkerk]] en [[Hoogezaand-Sapmeer | Hoogezaand]]. Dr wer veul soamenwaarkt mit [[Groninger Autobusdienst Onderneming|GADO]]<ref name="ArtikelGADO">[https://www.dekrantvantoen.nl/vw/article.do?v2=true&id=NVHN-19921120-AE0021010&vw=org&lm=sijpkes Gado en Sijpkes voorlopers in vervoersland], Nieuwsblad van het Noorden (20 november 1992).</ref>.
+Pieter Sijpkes begun in 1895 as omnibusondernemer<ref name="Hofman">Hofman, Beno (2015). ''Van omnibus tot Q-link: de geschiedenis van het busvervoer in Groningen en Drenthe''. OV-Bureau Groningen Drenthe, Assen. ISBN 978-90-77989-82-1.</ref><ref name="LangsDeWegen">[https://langs-de-wegen-s.jimdofree.com/sijpkes/ Langs de Wegen: Sijpkes], Autobus Documentatie Vereniging.</ref> in [[Drìntse Monden | Bunerveen]] mit n lijndienst tussen [[Börger]] en [[Knoal (dörp) | Knoal]]<ref name="ArtikelOmnibusBorger">[https://resolver.kb.nl/resolve?urn=MMDA03:000103613:mpeg21:a0006 Artikel in de Provinciale Drentsche en Asser courant (27 augustus 1897)].</ref> en loater ook tussen Bunerveen en [[Assen]]<ref name="ArtikelOmnibusAssen">[https://resolver.kb.nl/resolve?urn=MMDA03:000107110:mpeg21:a0026 Omnibusdienst Buinerveen-Assen], Provinciale Drentsche en Asser courant (15 april 1899).</ref>. t Bedrief gruide in de loop der tied uut tot n grode reisorganisoatsie<ref name="ArtikelHarmSijpkes">[https://resolver.kb.nl/resolve?urn=ddd:011018445:mpeg21:a0588 'We hebben onze body zo breed mogelijk gemaakt'], Nieuwsblad van het Noorden (29 april 1989).</ref>, onder aander deur de overnoame van [[Bergman's Autodienst | Bergman]] (1974), [[Reiscentrale Twente]] (RCT) (1975), [[Elema-Stollenga's Autodiensten | ESA]] (1985) en [[Harmanni]] (1990), en har busgarages in Knoal, Assen, [[Zwolle]] en [[Moarum]]. Sijpkes was aandeelhouder van de laandelke touroperator De Jong Intra en har reisbureaus in Knoal, [[Troapel]], Grunnen, [[Veendaam]], [[n Daam | Appengedaam]], [[Hoogkìrk | Hoogkerk]] en [[Hoogezaand-Sapmeer | Hoogezaand]]. Dr wer veul soamenwaarkt mit [[Groninger Autobusdienst Onderneming|GADO]]<ref name="ArtikelGADO">[https://www.dekrantvantoen.nl/vw/article.do?v2=true&id=NVHN-19921120-AE0021010&vw=org&lm=sijpkes Gado en Sijpkes voorlopers in vervoersland], Nieuwsblad van het Noorden (20 november 1992).</ref>.
 
 In 2011 ging t bedrief failliet<ref name="ArtikelFaillissementDvhN">[https://www.dvhn.nl/archief/Reisbureau-Sijpkes-stevent-af-op-faillissement-20696463.html Reisbureau Sijpkes stevent af op faillissement], Dagblad van het Noorden (16 september 2011).</ref><ref name="ArtikelFaillissementRTVN">[https://www.rtvnoord.nl/nieuws/104068/Ook-touringcarbedrijf-van-Sijpkes-failliet Ook touringcarbedrijf van Sijpkes failliet], RTV Noord (5 oktober 2011).</ref> en wer overnomen deur Arriva<ref name="ArtikelArriva">[https://www.rtvnoord.nl/nieuws/104502/Arriva-Touring-neemt-Sijpkes-over Arriva Touring neemt Sijpkes over], RTV Noord (22 oktober 2011).</ref>.
 
