*Empty MediaWiki Message*

--- a/Ofsluutdiek.mw
+++ b/Ofsluutdiek.mw
@@ -25,6 +25,7 @@ Op 1 november 2007 schreef t [[Noordhollands Dagblad]] dat der op de Ofsluutdiek
 
 == Nedersaksies ==
 * [[Grunnegs]]: ''Ôfsloetdiek'' of ''Òfsloetdiek''
+*[[Sallaands]]: O''fsluutdiek''
 * [[Urkers]]: ''Ofsleutdik''
 * [[Veluws]]: ''Ofsluutdiek'' of ''Aofsluutdiek''
 * '''Overig:''' ''Ofsluutdiek''
