--- a/Ofsluutdiek.mw
+++ b/Ofsluutdiek.mw
@@ -25,7 +25,7 @@ Op 1 november 2007 schreef t [[Noordhollands Dagblad]] dat der op de Ofsluutdiek
 
 == Nedersaksies ==
 * [[Grunnegs]]: ''Ôfsloetdiek'' of ''Òfsloetdiek''
-*[[Sallaands]]: O''fsluutdiek''
+* [[Sallaands]]: ''Ofsluutdiek''
 * [[Urkers]]: ''Ofsleutdik''
 * [[Veluws]]: ''Ofsluutdiek'' of ''Aofsluutdiek''
 * '''Overig:''' ''Ofsluutdiek''
