--- a/Lool.mw
+++ b/Lool.mw
@@ -1,4 +1,4 @@
-[[bestaand:Loil, beltmolen De Korenbloem RM12872 IMG 3388 2020-03-22 11.29.jpg|thumb|200px|]]
+[[Bestaand:Loil, beltmolen De Korenbloem RM12872 IMG 3388 2020-03-22 11.29.jpg|thumb|200px|]]
 '''Lool''' ([[Nederlands]]: ''Loil'') is een darp in de gemeente [[Montferland]] in de previnsie [[Gelderland]], in den streak den [[Achterhook]], in [[Nederland]]. Het hef een inwonerantal van umsgeveer 1900 inweuners.
 
 Het dorp wodden veur ut eerst enuumd in [[1178]], al was de name toen nog Loel. Lool hef een [[windmölle]], de Korenbloem, een [[katholieke]] [[Kaark (gebouw)|karke]] (Onze Lieve Vrouw Onbevlekt Ontvangen) en een [[basisskole]] (Daltonbasisskole, enuumd noar Sint Jozef). Ok hef ut verschillende sport- en vri-jetiedsverenigingen. Het darp is tevens bekend vanwaege het grote carnaval (één noa grootste optocht van Nederland). Ieder joar vertrekt vanuut Lool disse bonte stoet noar de vroggere heufdplaatse van de gemeente [[Diem]] woar Lool tot 1 januari 2005 bi-j heurde.
