--- a/Machu_Picchu.mw
+++ b/Machu_Picchu.mw
@@ -14,8 +14,8 @@
 
 '''Machu Picchu''' (oetsproak ''matjoe piektjoe'', van [[Quechua]] '''Machu Pikchu''': "de olle baargtop")<ref>Teofilo Laime Acopa, Diccionario Bilingüe, Iskay simipi yuyay k'ancha, Quechua – Castellano, Castellano – Quechua: '''''machu''''' - ''adj. y s. m. Viejo. Hombre de mucha edad (Úsase también para animales).'' - '''''machu''''' - ''s. m. Anciano. Viejo.'' '''''pikchu''''' - ''s. Pirámide. Sólido puntiagudo de varias caras. || Cono. Ch'utu.'' '''''machu pikchu''''' - ''s. La gran ciudadela pétrea que fue quizá uno de los más grandes monumentos religiosos del incanato, entre el valle del Cusco y la selva virgen (JAL). || Monumento arqueológico situado en el departamento actual del Cusco, junto al río Urubamba, en una cumbre casi inaccesible (JL).''</ref> was n [[Inka]] stad ien [[Peru]], dij middelkerwies baauwd worden is om en bie [[1440]]. t Het bestoan tou om en bie [[1532]], dou de [[Spanje|Spanjolen]] t veroverde en de bevôlken oetruid het. t Is ien terazzen baauwd op n baargdèlloop op sikkom 2.430 meter boven zeehoogte. t Ligt even tin noordwesten van de stad [[Cusco]] ien t zuden van t laand. 
 
-== Baauw ==
-t Komplex is baauwd worden oet [[graniet]]. Dizze stainen kommen doar van oorsprong nait veur en der gruien ook gain bomen. Hou man de stainen omhoog kregen het, blift tou vandoag aan dag n mysterie. Summege alternatieve groeperen leuven dat de stainen deur boeteneerdse wezens omhoog hoald binnen, wat ook de perfekte aarchitektuur verkloaren zol. Dit wordt nait deur [[historicus|geschiedkundegen]] steund. Zai denken dat der n hail ìnde luu wazzen dij deur middel van [[hefboom]]effekt de stainen omhoog drokt hebben. 
+== Bauw ==
+t Komplex is baauwd worden oet [[graniet]]. Dizze stainen kommen doar van oorsprong nait veur en der gruien ook gain bomen. Hou man de stainen omhoog kregen het, blift tou vandoag aan dag n mysterie. Summege alternatieve groeperen leuven dat de stainen deur boeteneerdse wezens omhoog hoald binnen, wat ook de perfekte aarchitektuur verkloaren zol. Dit wordt nait deur [[historicus|geschiedkundegen]] steund. Zai denken dat der n hail ìnde luu wazzen dij deur middel van [[hefboom]]effekt de stainen omhoog drokt hebben.
 
 == Historie ==
 De presieze funksie dij de stad doudestieds haar is nait zeker. Wel is zeker dat t n hailegdom was en dat t vaste bewonen haar. Dit bliek onderaandere oet t feit dat t stee oet 140 stainen gebaauwen bestaait dij grotendails woonhoezen wazzen. Ook binnen der sikkom 100 geribtes vonden van mìnsken, grotendails [[vraauw]]luu. Der wordt van oet goan dat ook de keunens van t Inka-riek hier ook woonden, messchain was t zulfs de heufdstad. De stad was middelkerwies onderverdaild ien drij gedailtes: 
