--- a/Machu_Picchu.mw
+++ b/Machu_Picchu.mw
@@ -12,7 +12,7 @@
 | omschrijving2 =  
 }}
 
-'''Machu Picchu''' (oetsproak ''matjoe piektjoe'', van [[Quechua]] '''Machu Pikchu''': "de olle baargtop")<ref>Teofilo Laime Acopa, Diccionario Bilingüe, Iskay simipi yuyay k'ancha, Quechua – Castellano, Castellano – Quechua: '''''machu''''' - ''adj. y s. m. Viejo. Hombre de mucha edad (Úsase también para animales).'' - '''''machu''''' - ''s. m. Anciano. Viejo.'' '''''pikchu''''' - ''s. Pirámide. Sólido puntiagudo de varias caras. || Cono. Ch'utu.'' '''''machu pikchu''''' - ''s. La gran ciudadela pétrea que fue quizá uno de los más grandes monumentos religiosos del incanato, entre el valle del Cusco y la selva virgen (JAL). || Monumento arqueológico situado en el departamento actual del Cusco, junto al río Urubamba, en una cumbre casi inaccesible (JL).''</ref> was n [[Inka]] stad ien [[Peru]], dij middelkerwies baauwd worden is om en bie [[1440]]. t Het bestoan tou om en bie [[1532]], dou de [[Spanje|Spanjolen]] t veroverde en de bevôlken oetruid het. t Is ien terazzen baauwd op n baargdèlloop op sikkom 2.430 meter boven zeehoogte. t Ligt even tin noordwesten van de stad [[Cusco]] ien t zuden van t laand. 
+'''Machu Picchu''' (oetsproak ''matjoe piektjoe'', van [[Quechua]] '''Machu Pikchu''': "de olle baargtop")<ref>Teofilo Laime Acopa, Diccionario Bilingüe, Iskay simipi yuyay k'ancha, Quechua – Castellano, Castellano – Quechua: '''''machu''''' - ''adj. y s. m. Viejo. Hombre de mucha edad (Úsase también para animales).'' - '''''machu''''' - ''s. m. Anciano. Viejo.'' '''''pikchu''''' - ''s. Pirámide. Sólido puntiagudo de varias caras. || Cono. Ch'utu.'' '''''machu pikchu''''' - ''s. La gran ciudadela pétrea que fue quizá uno de los más grandes monumentos religiosos del incanato, entre el valle del Cusco y la selva virgen (JAL). || Monumento arqueológico situado en el departamento actual del Cusco, junto al río Urubamba, en una cumbre casi inaccesible (JL).''</ref> was een [[Inka]] stad in [[Peru]], dij middelkerwies bouwd worden is om en bie [[1440]]. Het bestaan tou om en bie [[1532]], dou de [[Spanje|Spanjolen]] t veroverde en de bevôlken oetruid het. t Is ien terazzen baauwd op n baargdèlloop op sikkom 2.430 meter boven zeehoogte. Het ligt ten noordwesten van de stad [[Cusco]] ien t zuden van t laand.
 
 == Bauw ==
 t Komplex is baauwd worden oet [[graniet]]. Dizze stainen kommen doar van oorsprong nait veur en der gruien ook gain bomen. Hou man de stainen omhoog kregen het, blift tou vandoag aan dag n mysterie. Summege alternatieve groeperen leuven dat de stainen deur boeteneerdse wezens omhoog hoald binnen, wat ook de perfekte aarchitektuur verkloaren zol. Dit wordt nait deur [[historicus|geschiedkundegen]] steund. Zai denken dat der n hail ìnde luu wazzen dij deur middel van [[hefboom]]effekt de stainen omhoog drokt hebben.
