--- a/Hienebees.mw
+++ b/Hienebees.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Raspberries05.jpg|thumb|250px|Hienebees]]
+[[Ofbeelding:Raspberries (Rubus idaeus).jpg|thumb|250px|Hienebees]]
 [[Ofbeelding:Himbeere Blute.jpg|thumb|250px|De bleuiwieze van de hienebees]]
 [[Ofbeelding:Loganbes.jpg|thumb|250px|De loganbees]]
 [[Ofbeelding:Framboos_vruchten.jpg|250px|thumb|Hienebees]]
