*Empty MediaWiki Message*

--- a/Sallandsk_volkslyd.mw
+++ b/Sallandsk_volkslyd.mw
@@ -1,4 +1,4 @@
-Et '''Sallans volkslyd''' is 't [[volkslaid|volkslyd]] van [[Sallaand]], eskreven en ekomponeerd döör B.H. Brouwer. Hyronder styt de strektaalvarsy van et Sallandlyd. 
+Et '''Sallandsk volkslyd''' is 't [[volkslaid|volkslyd]] van [[Sallaand]], eskreaven en ekomponeerd döör B.H. Brouwer. Hyronder steyt de streaktaalvarsy van et Sallandlyd. 
 
 :'''Sallandlyd'''
 
