*Empty MediaWiki Message*

--- a/Mark_Rutte.mw
+++ b/Mark_Rutte.mw
@@ -2,6 +2,8 @@
 
 Hallo en welkom bij een nieuwe pers fiwhfqifh vandaag ben ik gay geworden en vegan dus ik eet geen piemels meer
 
+EN PRECIOUS IS MY BESTIE
+
 * [http://www.markrutte.nl/ De offisjele webstea van Mark Rutte]
 * [http://www.tweedekamer.nl/kamerleden/alle_kamerleden/rutte_mark/index.jsp Mark Rutte], [[Tweede Kamer der Staten-Generaal]]
 
