--- a/Alexia_van_Nederlaand.mw
+++ b/Alexia_van_Nederlaand.mw
@@ -1,4 +1,4 @@
-'''Preensesse Alexia''' (geboren op [[26 juni]] [[2005]], [[Den Haag]]), voluut ''Alexia Juliana Marcela Laurentien van Oranje-Nassau'', is de tweede dochter van [[Willem-Alexander van Nederlaand|Könning Willem-Alexander]] en [[Máxima Zorreguieta|Könneginne Máxima]].
+'''Preeenseesssee Alexia''' (geboren op [[26 juni]] [[2005]], [[Den Haag]]), voluut ''Alexia Juliana Marcela Laurentien van Oranje-Nassau'', is de tweede dochter van [[Willem-Alexander van Nederlaand|Könning Willem-Alexander]] en [[Máxima Zorreguieta|Könneginne Máxima]].
 
 == Geboorte ==
 Preensesse Alexia is geboren op zundag [[26 juni]] [[2005]] om 14.41 ure in et [[Ziekehuus Bronovo]] in Den Haag. Deensdag [[28 juni]], in et oolde stadhuus van Den Haag, gaf heur heit heur geboorte an bi'j de burgerlike staand, in de persoon van borgemeister Wim Deetman.
