*Empty MediaWiki Message*

--- a/1945.mw
+++ b/1945.mw
@@ -179,7 +179,7 @@ De volgende gebeurtenissen vunnen plaose in 't jaor '''1945'''.
 * [[2 juli|2]] - [[Jip Golsteijn]], Nederlaands journalist, skriever en songskriever (oaverleaden [[2002]])
 * [[6 juli|6]] - [[Zjef Vanuytsel]], Vloams kleinkunstzanger ("De Zotte Morgen")
 * [[9 juli|9]] - [[Harry Bolwijn]], Nederlaands wetholder van dem gemeente [[Eemsmond]]
-* [[9 juli|9]] - [[Dean Koontz]], Amerikaans skrieverr van [[horror]]verhoalen
+* [[9 juli|9]] - [[Dean Koontz]], Amerikaans skriever van [[horror]]verhoalen
 * [[10 juli|10]] - [[Ron Glass]], acteur
 * [[10 juli|10]] - [[Virginia Wade]], Brits tennisster
 * [[12 juli|12]] - [[Jeff Galloway]], Amerikaans atleet
