--- a/De_Steeg.mw
+++ b/De_Steeg.mw
@@ -7,7 +7,7 @@ Umdat de twee grootste plaatsen in de gemeente Rheden an de west- en t oostrand 
 
 == Foto-uutstalling ==
 <gallery>
-Bestaand:De Steeg, kerk op de Hoofdstraat 15 foto3 2011-07-12 12.40.jpg|Kerk
+Bestaand:De Steeg ,de Rooms Katholieke kerk GM0275-42 IMG 3808 2020-03-31 10.00.jpg|Kerk
 Bestaand:De Steeg, TC van het voormalige gemeentehuis Hoofdstraat 4 GM0275-32 foto6 2013-06-06 17.25.jpg|Deel van t vroggere gemeentehuus
 Bestaand:Postkantoor De Steeg.jpg|t Monumentale postkantoor an de Heufdstraot
 Bestaand:De Steeg, Huize Rhederpark GM0275-52 IMG 3497 2020-03-22 16.33.jpg|Huze Rhederpark
