--- a/Goaitsen_van_der_Vliet.mw
+++ b/Goaitsen_van_der_Vliet.mw
@@ -11,7 +11,7 @@ Mit zien ienmansbedrief De Oare útjouwerij (D'aandere uutgeveri'je) gef Van der
 Onder de titel ''De Verdichting'' publiceerden e Twèentse vertalings van gedichten uut verskeiden talen in 't Twèentse weekblad ''[[De Roskam]]''.<ref>[http://members.home.nl/goaitsen/twents/dv/index.htm ''De Verdichting'', Twèentse poëzievertalings deur Goaitsen van der Vliet]</ref> Mit [[Frank Löwik]] hef hi'j de Twèentse vertaling emeuken veur 't stripboek ''Asterix den Galliër'' (1997), det hi'j ok hef uutegeben.<ref>[http://members.home.nl/dou/adg.htm Oaver ''Asterix den Galliër'']</ref> Ok was hi'j taalcoach (eerste jaor) en hef hi'j dialogen vertaald (tweide jaor) veur de Twèentstalige [[regiosoap|zieperiege]] [[Van Jonge Leu en Oale Groond]].
 
 ==Standaard Schriefwieze==
-Van der Vliet hef de [[Standaard Schriefwieze]] ontwörpen veur Twèentse en anverwaante streektalen. Dizze skriefwieze is de miest gangbare veur 't Twèents naost de oldere skriefwieze van de [[Kreenk vuur de Twentse Sproak]] en is daor ok op ebaseerd. De Standaard Schriefwieze wik op een paar punten van de Kreenk-skriefwieze of, en d'r bint riegels bi'j edaon die volngs Van der Vliet de streektaalvariaanten in heur skriftelijke weergaove meer op menare antrekt en de leesberheid verhoogt.<ref>[http://members.home.nl/dialexicon/versie/Spelling.rtf Standaard Schriefwieze (rtf-bestaand)]</ref> De Standaard Schriefwieze is fonetischer as de mieste aandere schriefwiezen veur 't [[Nedersaksisch]] as 't giet um de uutgaank ''-n'' (''maakn'', ''beginn'', ''teagn'') in stee van ''-en'' (''maken'', ''beginnen'', ''tegen'').
+Van der Vliet hef de [[Standaard Schriefwieze]] ontwörpen veur Twèentse en anverwaante streektalen. Dizze skriefwieze is de miest gangbare veur 't Twèents naost de oldere skriefwieze van de [[Kreenk vuur de Twentse Sproak]] en is daor ok op ebaseerd. De Standaard Schriefwieze wik op een paar punten van de Kreenk-skriefwieze of, en d'r bint riegels bi'j edaon die volngs Van der Vliet de streektaalvariaanten in heur skriftelijke weergaove meer op menare antrekt en de leesberheid verhoogt.<ref>[http://members.home.nl/dialexicon/versie/Spelling.rtf Standaard Schriefwieze (rtf-bestaand)]</ref> De Standaard Schriefwieze is fonetischer as de mieste aandere schriefwiezen veur 't [[Nedersaksisch]] as 't giet um de uutgaank ''-n'' (''maakn'', ''beginn'', ''teagn'') in stee van ''-en'' (''maken'', ''beginnen'', ''teagen'').
 
 ==Dialexicon Twents, films, Twentse Taalbank==
 Van der Vliet is de samensteller van 't [[Dialexicon Twents]], een digitaal woordenboek mit (in oktober 2010) hoast 50.000 trefwoorden en 25.000 uutdrokkings, Twèents-Nederlaans en Nederlaans-Twèents. 't Giet uut van de Standaard Schriefwieze.<ref>[http://members.home.nl/dialexicon/index.htm Dialexicon Twents, digitaal Twèents woordenboek]</ref>
